[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.5",
    "mcp>=1.18.0",
    "pymupdf>=1.26.5",
    "requests>=2.32.5",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
